[package]
name = "owo-colors"
version = "1.1.3"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
documentation = "https://docs.rs/owo-colors"
repository = "https://github.com/jam1garner/owo-colors"
description = "Zero-allocation terminal colors that'll make people go owo"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "custom_colors"
required-features = ["custom"]

[features]
custom = []
