[package]
name = "owo-colors"
version = "2.0.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
documentation = "https://docs.rs/owo-colors"
repository = "https://github.com/jam1garner/owo-colors"
description = "Zero-allocation terminal colors that'll make people go owo"
license = "MIT"
readme = "README.md"
keywords = ["cli", "color", "no-std", "terminal", "ansi_term"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "is_tty"
required-features = ["tty"]

[features]
env-no-color = []
no-color = []
tty = ["atty"]

# outdated feature, does nothing
custom = []

[dependencies]
atty = { version = "0.2", optional = true }
